src/tests/ci/assignment_5_functions/valid/09_function_pointer_return.c
int* create_pointer(int* x) {
    return x;
}

int main() {
    int value = 42;
    int* ptr = create_pointer(&value);
    return *ptr;
}