src/tests/ci/assignment_5_functions/invalid_semantic/10_function_param_pointer_mismatch.c
void process(int* ptr) {

}

int main() {
    float x = 3.14;
    process(&x);
    return 0;
}